...
        child: ListView(shrinkWrap: true, children: [
          Padding(
            padding: EdgeInsets.symmetric(horizontal: 8, vertical: 16),
            child: Column(
              children: [
                Text(
                  "My Profile",
                  style: TextStyle(
                    fontSize: screenHeight * 0.036,
                  ),
                ),
                FutureBuilder(
                    future: _db.getUserProfilePic(),
...
                    ),
                    isEditing
                        ? Container(
                            height: screenHeight * 0.07,
                            width: screenWidth * 0.65,
                            child: TextFormField(
                              key: ValueKey("nameField"),
                              initialValue: username,
                              style: TextStyle(
                                fontSize: screenHeight * 0.036,
                              ),
                              textAlign: TextAlign.center,
                              decoration: InputDecoration(
...
                              );
                            }),
                    isEditing
                        ? Row(
                            children: [
                              IconButton(
                                key: ValueKey("finalised"),
                                icon: Icon(Icons.check),
                                onPressed: () async {
                                  await _db.updateUsername(newName);
                                  setState(() {
                                    isEditing = false;
                                  });
...
                                  });
                                },
                              ),
                            ],
                          )
                        : IconButton(
                            key: ValueKey("changeNameIcon"),
                            icon: Icon(Icons.edit),
                            onPressed: () {
                              setState(() {
                                isEditing = true;
                              });
                            },
...
            ),
          ),
          // Hid sign out button on Profile page
          // Padding(
          //   padding: const EdgeInsets.symmetric(horizontal: 30, vertical: 20),
          //   child: MyButtons.roundedRed(
          //     key: ValueKey("sign-out-button"),
          //     text: "Sign Out",
          //     onPressed: () async {
          //       await _auth.signOut();
          //       Navigator.of(context).popUntil((route) => route.isFirst);
          //     },
          //   ),
...
